--- a/frontend/src/app/cart_page/cart-page.component.css
+++ b/frontend/src/app/cart_page/cart-page.component.css
@@ -1,5 +1,34 @@
 
+input{
+  margin: 5px;
+  width:90%;
+  border-radius: 4px;
+  padding:5px;
+}
+#Lour{
 
+    margin:5px;
+    border-radius: 5px;
+    padding:5px;
+    color: white;
+    background-color: green;
+    width:15%;
+}
+#Lour:hover{
+  background-color: #155724;
+}
+button{
+    margin:5px;
+    border-radius: 5px;
+    padding:5px;
+    color: white;
+    background-color: green;
+    width:100%;
+}
+button:hover{
+  color:green;
+  background-color:white;
+}
 header {
   text-align: center;  
   background-color: palevioletred;
