--- a/frontend/src/app/product-details/product-details.component.html
+++ b/frontend/src/app/product-details/product-details.component.html
@@ -1,3 +1,10 @@
+<header><h2>SmartBuy Store 🛒</h2></header>
+
+<nav>
+  <a routerLink="/" >Product List</a> |
+  <a routerLink="/cart">My Cart 🛒</a>
+</nav>
+
 <div class="details-container">
   <img [src]="product.image" alt="{{product.name}}" class="product-img">
 
