--- a/frontend/src/app/product-details/product-details.component.css
+++ b/frontend/src/app/product-details/product-details.component.css
@@ -28,3 +28,41 @@
   background-color: #d32f2f;
 }
 
+header {
+  text-align: center;  
+  background-color: palevioletred;
+  color:white;
+  margin-top: 0 !important;
+  padding-top: 10px !important;
+  padding: 10px 0;
+  
+}
+
+  nav {
+    text-align: center;
+    background-color: palevioletred;
+    overflow: hidden;
+    padding:10px;
+    margin-bottom: 25px;
+  }
+  nav div {
+  display: flex;
+  justify-content: center; 
+  align-items: center;
+  gap: 10px;   /* مسافة بين العناصر */
+}
+nav a {
+  text-decoration: none;
+  color: white;
+  font-weight: 300;
+}
+
+nav p {
+  margin: 0;   /* إزالة المسافات العشوائية */
+  color: white;
+}
+
+  nav a:hover {
+   
+    background-color: rgb(243, 162, 189);
+  }
