--- a/frontend/src/app/cart/cart.component.css
+++ b/frontend/src/app/cart/cart.component.css
@@ -25,7 +25,7 @@ app-cart {
 
 header {
   text-align: center;  
-  background-color: palevioletred;
+  background-color: rgb(7, 7, 7);
   color:white;
   margin-top: 0 !important;
   padding-top: 10px !important;
@@ -35,7 +35,7 @@ header {
 
   nav {
     text-align: center;
-    background-color: palevioletred;
+    background-color: rgb(7, 7, 7);
     overflow: hidden;
     padding:10px;
     margin-bottom: 25px;
@@ -46,7 +46,7 @@ header {
   align-items: center;
   gap: 10px;   /* مسافة بين العناصر */
 }
-nav a {
+nav a,#Lour2 {
   text-decoration: none;
   color: white;
   font-weight: 300;
@@ -59,7 +59,7 @@ nav p {
 
   nav a:hover {
    
-    background-color: rgb(243, 162, 189);
+    background-color: rgb(133, 117, 121);
   }
 
 
@@ -107,7 +107,7 @@ nav p {
 .cart-item button {
   padding: 5px 10px;
   border: none;
-  background-color: #b9309c;
+  background-color: #050505;
   color: white;
   border-radius: 4px;
   cursor: pointer;
@@ -115,7 +115,7 @@ nav p {
 }
 
 .cart-item button:hover {
-  background-color: #d32f2f;
+  background-color: #686464;
 }
 
 /* الإجمالي الكبير */
