--- a/frontend/src/app/product-details/product-details.component.html
+++ b/frontend/src/app/product-details/product-details.component.html
@@ -1,8 +1,10 @@
 <header><h2>SmartBuy Store 🛒</h2></header>
 
 <nav>
-  <a routerLink="/" >Product List</a> |
+  <p id="Lour3">
+    <a routerLink="/" >Product List</a> |
   <a routerLink="/cart">My Cart 🛒</a>
+</p>
 </nav>
 
 <div class="details-container">
